tests/fail/missing_params.rs
fn main() {
    sscanf::scanf!();
    sscanf::scanf!("5");
    sscanf::scanf!("5",);
    sscanf::scanf_get_regex!();
    sscanf::scanf_unescaped!();
}
